<resources>
    <string name="app_name">MAABOOK</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="logo">LOGO</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="list_item">List Item</string>
    <string name="_4_5">4.5</string>
    <string name="rs_299">Rs. 299</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="check_internet">Check Internet</string>
    <string name="about_the_book">About the book:</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="book_added_to_favourites">Book added to favourites</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="rs_499">Rs. 499</string>
    <string name="book_removed_from_favourites">Book Removed From Favourites</string>
    <string name="action_sort">Action Sort</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_account">Don\' t Have an Account?</string>
    <string name="name">Name\n</string>
    <string name="email1">Email</string>
    <string name="password1">Password\n</string>
    <string name="password2">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="preference_file_name">MAA Preference</string>
    <string name="delete_account">Delete Account</string>
    <string name="write">Enter your registered mobile number and email below:</string>
    <string name="about_app_title">About Bookstore App</string>
    <string name="about_app_subtitle">Welcome to our bookstore app! Here you can find and read overviews of your favorite books from a wide range of categories. We hope you enjoy using our app!</string>
    <string name="logo_description">Bookstore App Logo</string>
    <string name="app_icon_description">Bookstore App Icon</string>
    <string name="home">HOME</string>
    <string name="check">Check</string>
</resources>