<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:theme="@style/MAA"/>

    <EditText
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="7dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/orange"
        android:autofillHints="Hello"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"/>

    <EditText
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:textColor="@color/orange"
        android:autofillHints="something@gmail.com"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"/>

    <EditText
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="7dp"
        android:hint="@string/mobile_number1"
        android:inputType="phone"
        android:textColor="@color/orange"
        android:autofillHints="1234567890"
        android:drawableStart="@drawable/ic_iphone"
        android:drawablePadding="5dp"/>

    <EditText
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:id="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mobile_number"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:autofillHints="password1"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"/>

    <EditText
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password1"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="7dp"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:autofillHints="confirm password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="25dp"
        android:background="@color/brown"
        android:paddingHorizontal="90dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:textSize="20sp" />

</RelativeLayout>