<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:theme="@style/MAA"/>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_weight="1.5"
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:src="@drawable/logo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/logo" />

                <RelativeLayout
                    android:layout_weight="3.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/brown"/>

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName"
                        android:text="@string/name_of_the_author"
                        android:padding="8dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/rs_299"
                        android:padding="8dp"
                        android:layout_below="@id/txtBookAuthor"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#357a38"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_weight="1.2"
                    android:layout_width="0dp"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:textColor="#ffca28"
                    android:text="@string/_4_5"
                    android:drawablePadding="4dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_ratings"/>

            </LinearLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContent">

<!--                This is the another way I can put the about the book in center horizontal-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center_horizontal"-->
                
                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:textSize="18sp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/brown"
                    android:layout_marginBottom="42dp"
                    android:layout_marginHorizontal="10dp"/>
                
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:text="@string/add_to_favourite"
        android:textColor="@color/brown"
        android:textSize="19sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>