<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llFavContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="11">

        <ImageView
            android:id="@+id/imgFavBookImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/grey_white"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/txtFavBookTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="2dp"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/grey_white" />

        <TextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="2dp"
            android:text="@string/android_inc"
            android:textAlignment="center"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/grey_white" />

        <TextView
            android:id="@+id/txtFavBookPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="2dp"
            android:text="@string/rs_499"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/grey_white" />

        <TextView
            android:id="@+id/txtFavBookRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:drawablePadding="4dp"
            android:padding="2dp"
            android:text="@string/_4_5"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="13sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_ratings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/grey_white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>