<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:cardCornerRadius="24dp"
                android:layout_marginBottom="25dp"
                android:elevation="10dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" />

            </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:textColor="@color/brown"
            android:autofillHints="Hello"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/brown"/>

        <TextView
            android:id="@+id/txt_mobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/brown"/>

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/brown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|center">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:background="@color/brown"
            android:paddingHorizontal="90dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textColor="@color/orange"
            android:paddingHorizontal="56dp"
            android:textSize="18sp"
            android:background="@color/brown"/>

    </LinearLayout>

</FrameLayout>